[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aio_sockets"
version = "0.1.0"
description = "Simplified Async TCP and UDP Sockets for Python 3.8+"
readme = "README.md"
authors = [{name = "yinkaisheng", email = "yinkaisheng@foxmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
keywords = ["asyncio", "socket", "networking"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yinkaisheng/aio-sockets"

[tool.setuptools.packages.find]
where = ["."]
include = ["aio_sockets"]
